syntax = "proto3";
package gateway.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway/pkg/api/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

import "google/protobuf/wrappers.proto";
import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/ref.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options.proto";

// VirtualHostOption CRD, used to externalize VirtualHost options configuration,
// and can be reused across multiple VirtualHosts
message VirtualHostOption {

  option (core.solo.io.resource).short_name = "vsopts";
  option (core.solo.io.resource).plural_name = "virtual_host_options";

  // Status indicates the validation status of this resource.
  // Status is read-only by clients, and set by gloo during validation
  core.solo.io.Status status = 1 [(extproto.skip_hashing) = true];

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 2;

  // VirtualHost options. See VirtualHost for delegation behavior.
  gloo.solo.io.VirtualHostOptions options = 3;
}

// List of references to VirtualHostOption custom resources
message VirtualHostOptionRefs {
  // reference to a `VirtualHostOption` resource
  repeated core.solo.io.ResourceRef refs = 1;
}

// RouteOption CRD, used to externalize Route options configuration,
// and can be reused across multiple Routes
message RouteOption {

  // RouteOption ref

  option (core.solo.io.resource).short_name = "rtopts";
  option (core.solo.io.resource).plural_name = "route_options";


  // Status indicates the validation status of this resource.
  // Status is read-only by clients, and set by gloo during validation
  core.solo.io.Status status = 1 [(extproto.skip_hashing) = true];

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 2;

  // Route options. See Route for delegation behavior.
  gloo.solo.io.RouteOptions options = 3;
}

// List of references to RouteOption custom resources
message RouteOptionRefs {
  // reference to a `RouteOption` resource
  repeated core.solo.io.ResourceRef refs = 1;
}